--- a/style.css
+++ b/style.css
@@ -627,3 +627,19 @@ font-size: 25px;
     height: 100%;
     object-fit: cover;
 }
+
+@media (max-width: 760px){
+    .Wholecontainer{
+        display: none;
+    }
+
+    .mobile{
+        display: block;
+    }
+}
+
+@media (min-width: 768px){
+    .mobile{
+        display: none;
+    }
+}
